--- a/org.eclipse.paho.mqttv5.client.test/pom.xml
+++ b/org.eclipse.paho.mqttv5.client.test/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.eclipse.paho</groupId>
-        <artifactId>java-parent</artifactId>
+        <groupId>cn.devicelinks.framework</groupId>
+        <artifactId>paho-java-parent</artifactId>
         <version>1.2.6</version>
     </parent>
 
@@ -85,7 +85,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.eclipse.paho</groupId>
+            <groupId>cn.devicelinks.framework</groupId>
             <artifactId>org.eclipse.paho.mqttv5.client</artifactId>
             <version>1.2.6</version>
         </dependency>
