--- a/org.eclipse.paho.mqttv5.client/pom.xml
+++ b/org.eclipse.paho.mqttv5.client/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.eclipse.paho</groupId>
-        <artifactId>java-parent</artifactId>
+        <groupId>cn.devicelinks.framework</groupId>
+        <artifactId>paho-java-parent</artifactId>
         <version>1.2.6</version>
     </parent>
 
@@ -60,7 +60,7 @@
                 </configuration>
                 <dependencies>
                     <dependency>
-                        <groupId>org.eclipse.paho</groupId>
+                        <groupId>cn.devicelinks.framework</groupId>
                         <artifactId>org.eclipse.paho.mqttv5.common</artifactId>
                         <version>1.2.5</version>
                     </dependency>
