--- a/org.eclipse.paho.sample.mqttclient/pom.xml
+++ b/org.eclipse.paho.sample.mqttclient/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
 	<parent>
-		<groupId>org.eclipse.paho</groupId>
-		<artifactId>java-parent</artifactId>
+		<groupId>cn.devicelinks.framework</groupId>
+		<artifactId>paho-java-parent</artifactId>
 		<version>1.2.6</version>
 	</parent>
-	<groupId>org.eclipse.paho</groupId>
+	<groupId>cn.devicelinks.framework</groupId>
 	<artifactId>org.eclipse.paho.sample.mqttclient</artifactId>
 	<version>1.2.6</version>
 	<name>org.eclipse.paho.sample.mqttclient</name>
@@ -32,12 +32,12 @@
 			<version>1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.paho</groupId>
+			<groupId>cn.devicelinks.framework</groupId>
 			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
 			<version>1.2.6</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.paho</groupId>
+			<groupId>cn.devicelinks.framework</groupId>
 			<artifactId>org.eclipse.paho.mqttv5.client</artifactId>
 			<version>1.2.6</version>
 		</dependency>
