--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.eclipse.paho</groupId>
-	<artifactId>java-parent</artifactId>
+	<groupId>cn.devicelinks.framework</groupId>
+	<artifactId>paho-java-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>1.2.6</version>
 
@@ -230,137 +230,42 @@
                 </executions>
             </plugin>
             <plugin>
-                <!--
-                    Use the Nexus Staging plugin as a full replacement for the standard
-                    Maven Deploy plugin.
-                    See https://github.com/sonatype/nexus-maven-plugins/tree/master/staging/maven-plugin
-                    why this makes sense :-)
-                    We can control whether we want to deploy to the Eclipse repo or Maven Central
-                    by a combination of the version being a SNAPHOT or release version and property
-                    skipStaging=true/false.
-                    In any case we can take advantage of the plugin's "deferred deploy" feature which
-                    makes sure that all artifacts of a multi-module project are deployed as a whole
-                    at the end of the build process instead of deploying each module's artifacts
-                    individually as part of building the module.
-                 -->
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.5</version>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.6.0</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                    <publishingServerId>hengyu</publishingServerId>
+                    <excludeArtifacts>
+                        <artifact>org.eclipse.paho.client.mqttv3.repository</artifact>
+                        <artifact>org.eclipse.paho.client.mqttv3.test</artifact>
+                        <artifact>org.eclipse.paho.mqttv5.client.repository</artifact>
+                        <artifact>org.eclipse.paho.mqttv5.client.test</artifact>
+                    </excludeArtifacts>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.2.7</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>eclipse-sign</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.eclipse.tycho</groupId>
-                        <artifactId>target-platform-configuration</artifactId>
-                        <configuration>
-                            <includePackedArtifacts>true</includePackedArtifacts>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.eclipse.tycho.extras</groupId>
-                        <artifactId>tycho-pack200a-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>pack200-normalize</id>
-                                <goals>
-                                    <goal>normalize</goal>
-                                </goals>
-                                <phase>verify</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.eclipse.cbi.maven.plugins</groupId>
-                        <artifactId>eclipse-jarsigner-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>sign</id>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                                <phase>verify</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.eclipse.tycho.extras</groupId>
-                        <artifactId>tycho-pack200b-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>pack200-pack</id>
-                                <goals>
-                                    <goal>pack</goal>
-                                </goals>
-                                <phase>verify</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.eclipse.tycho</groupId>
-                        <artifactId>tycho-p2-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>p2-metadata</id>
-                                <goals>
-                                    <goal>p2-metadata</goal>
-                                </goals>
-                                <phase>verify</phase>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <defaultP2Metadata>false</defaultP2Metadata>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <!-- this profile generates GPG signatures -->
-            <id>create_gpg_signature</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-                <property>
-                    <name>createGPGSignature</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
     <modules>
         <module>org.eclipse.paho.client.mqttv3</module>
         <module>org.eclipse.paho.client.mqttv3.repository</module>
         <module>org.eclipse.paho.client.mqttv3.test</module>
         <module>org.eclipse.paho.mqttv5.client</module>
         <module>org.eclipse.paho.mqttv5.client.repository</module>
+        <module>org.eclipse.paho.mqttv5.client.test</module>
     </modules>
 </project>
 
